survey-salesforce/salesforce-app/src/objects/Inventory_Adjustment__c.object
<CustomObject>
    <description>This object stores all details of a stock adjustment which in turn updates stock levels/values.</description>
    <fields>
        <fullName>Adjustment_Qty__c</fullName>
        <description>Quantity to adjust in inventory to account number of items delivered or received</description>
        <label>Adjustment Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Reason__c</fullName>
        <description>Reason for doing the adjustment</description>
        <label>Adjustment Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Product Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Incorrect Quantities</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cycle_Count_Reason__c</fullName>
        <description>Cycle Count Reason</description>
        <label>Reason (Cycle Count)</label>
        <picklist>
            <picklistValues>
                <fullName>Test 1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date on which adjustments will be done</description>
        <label>Date of Adjustment</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <description>Each inventory adjustment will be linked to specific Inventory</description>
        <label>Inventory</label>
        <referenceTo>Taro_Inventory__c</referenceTo>
        <relationshipLabel>Inventory Adjustments</relationshipLabel>
        <relationshipName>Inventory_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Inventory Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>Inventory Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Cycle_Count</fullName>
        <active>true</active>
        <description>Record Type for cycle count</description>
        <label>Cycle Count</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Adjustment</fullName>
        <active>true</active>
        <description>Record Type for inventory adjustment</description>
        <label>Inventory Adjustment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>